fix overflow change

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,10 +15,6 @@ html {
   color: black;
 }
 
-body {
-  overflow: hidden;
-}
-
 h1.title {
   display: inline-block;
   margin: 50px;
